--- a/Config/Clash/ClashRules.ini
+++ b/Config/Clash/ClashRules.ini
@@ -4,7 +4,7 @@
 # 设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/UnBan.list
-ruleset=🛑 广告拦截,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/BanAD.list
+ruleset=🛑 全球拦截,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/BanAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/BanProgramAD.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/GoogleFCM.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/GoogleCN.list
@@ -28,10 +28,10 @@ ruleset=🐟 漏网之鱼,[]FINAL
 # 设置规则标志位
 
 # 设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🎯 全球直连`[]🚥 故障转移`[]🎛 负载均衡`[]🔰 手动选择`.*
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🎯 全球直连`[]🚥 故障转移`[]🎛 负载均衡`[]🔰 手动选择
 custom_proxy_group=🔰 手动选择`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`.*
 custom_proxy_group=🚥 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎛 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
@@ -58,6 +58,4 @@ custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Me
 
 enable_rule_generator=true
 overwrite_original_rules=true
-
-
 
