--- a/Config/Clash/ClashRules.ini
+++ b/Config/Clash/ClashRules.ini
@@ -4,6 +4,7 @@
 # 设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/UnBan.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/MyDirectRules.list
 ruleset=🛑 全球拦截,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/BanAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/BanProgramAD.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/GoogleFCM.list
@@ -19,6 +20,7 @@ ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/MoeCG/moe/master/Con
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/BilibiliHMT.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/ProxyMedia.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/MyProxyRules.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/ProxyGFWlist.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/ChinaCompanyIp.list
