--- a/Config/Clash/ClashRules.ini
+++ b/Config/Clash/ClashRules.ini
@@ -5,12 +5,13 @@
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/UnBan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/MyDirectRules.list
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/BanAD.list
-ruleset=🍃 应用净化,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/BanProgramAD.list
+#ruleset=🛑 全球拦截,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/BanAD.list
+#ruleset=🍃 应用净化,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/BanProgramAD.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/GoogleFCM.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/GoogleCN.list
 ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/OneDrive.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/Microsoft.list
+ruleset=🍎 苹果服务,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/Apple.list
 ruleset=📲 电报消息,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/Telegram.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/Epic.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/MoeCG/moe/master/Config/Clash/rules/Steam.list
@@ -35,12 +36,13 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`.*
 custom_proxy_group=🚥 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎛 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
+#custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
+#custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=📢 谷歌FCM`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🔰 手动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🔰 手动选择`[]🎯 全球直连
 custom_proxy_group=Ⓜ️ 微软云盘`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🔰 手动选择
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🔰 手动选择
+custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🔰 手动选择
 custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`[]🔰 手动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🔰 手动选择`[]🎯 全球直连`[]🎥 奈飞节点
 custom_proxy_group=📺 巴哈姆特`select`[]🚀 节点选择`[]♻️ 自动选择`[]🔰 手动选择`[]🎯 全球直连`[]🇨🇳 台湾节点
